/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package agil.Const;

/**
 *
 * @author Carlos
 */
public  class Seletor extends Object{
    
    public static enum tipoPessoa{
        PJ,
        PF
    }
    public enum dia{
        
    }
    public enum mes{
        
    }
   public enum ano1{     
   }
    public void Ano(){  
            } 
}
